# double-agent

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
scripts/: aider_lint.sh
src/double_agent/: agent_chat.py  double_agent_app.py  index.html
tests/: test_double_agent_app.py  test_foo.py
